Fix typo in template

--- a/ants/templates/visual.html
+++ b/ants/templates/visual.html
@@ -5,7 +5,7 @@
   <title>Ants</title>
   <link rel="stylesheet" href="/static/ants/visual.css" type="text/css" media="screen" charset="utf-8">
   <!-- jQuery 1.8.0 is known to break Ants right now. Untested with 1.8.1+ -->
-  <script src="//ajax.googleapis.com/ajax/libs/jquery/1.7.2/jquery.min.js"></script>
+  <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.7.2/jquery.min.js"></script>
   <script src="/static/ants/build.js" type="text/javascript" charset="utf-8"></script>
   
 </head>
